--- a/pages/components/contact/contact.wxss
+++ b/pages/components/contact/contact.wxss
@@ -1,1 +1,4 @@
-.btn{ width:92%; margin-top:100px; text-align: center;}
+page{ background:#f4f4f4; }
+.btn{ width:92%; margin-bottom:10px; text-align: center;}
+.container{ padding:20px; }
+.container view{ padding:8px 0; font-size:18px; }
