--- a/pages/components/contact/contact.wxml
+++ b/pages/components/contact/contact.wxml
@@ -1,9 +1,9 @@
 
 
 <view class="container">
-  <view>销售品牌：孙忠</view>
+  <view>联系人：孙忠</view>
   <view>联系电话：13901203458 / 13522080638</view>
-  <view bindtap="openMap">店铺地址：北京市朝阳区北五环建材灯饰城</view>
+  <view bindtap="openMap">店铺地址：北京市朝阳区北五环建材灯饰城4层-B107</view>
 </view>
 
 
