--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -12,31 +12,21 @@
   </view>
 
     <!-- 分类导航 -->
-  <!-- <view class="nav-block wrap">
+   <view class="nav-block wrap">
     <block wx:for="{{navItems}}"> 
       <view class="wrap-item {{item.isSplot ? 'exp' : ''}}">  
         <navigator url="../components/{{item.url}}/{{item.url}}" hover-class="navigator-hover">{{item.name}}</navigator>
       </view>
     </block>
-  </view> -->
+  </view> 
   <view class="wrap">
-    <!-- <view>{{title}}</view>
+    <view>{{title}}</view>
     <view class="shop" wx:for="{{shops}}" wx:key="id">
       <navigator url="/pages/shop/shop?id={{item.id}}">
         <image src="{{item.img}}"/>
       </navigator>
-		</view> -->
-    
-
-    <view class="contact-wrapper">
-      <view>联系人：孙忠</view>
-      <view>联系电话：13901203458 / 13522080638</view>
-      <view bindtap="openMap">地址：北京市朝阳区北五环建材灯饰城4层D178</view>
-    </view>
-
-
-    <button type="primary" bindtap="call" class="btn call">电话联系</button>  
-    <button type="primary" bindtap="openMap" class="btn openMap">导航到店</button>
+		</view> 
+  
 
    
   </view>
