--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -20,7 +20,7 @@
     </block>
   </view> 
   <view class="wrap">
-    <view>{{title}}</view>
+    <!-- <view class="title">{{title}}</view> -->
     <view class="shop" wx:for="{{shops}}" wx:key="id">
       <navigator url="/pages/shop/shop?id={{item.id}}">
         <image src="{{item.img}}"/>
