--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -30,3 +30,14 @@ page{ background:#f4f4f4; }
 .contact-wrapper view{ padding:8px 0; font-size:18px; } 
 .openMap{ margin-top: 15px; }
 
+
+ .wrap{ padding: 0 1%; } 
+.shop{ width: 49.5%;  float: left; height:auto; }
+.shop:nth-child(2n){ margin-right: 1%; }
+.shop image{ width: 100%; height: 185px; }
+
+.index_title{
+  height:26px;
+  line-height:26px;
+  margin-bottom: 10px;
+}
