--- a/pages/shop/shop.wxss
+++ b/pages/shop/shop.wxss
@@ -1,7 +1,17 @@
-.container{ text-align: center }
+/* .container{ text-align: center }
 
 .shopImg image{ width: 100%; height: 100%;}
 
 .shopImg{ width: 100%; height:370px;  margin:0 auto;}
 
+page{ height: 100%; } */
+
 page{ height: 100%; }
+
+
+.shopImg image{ width: 100%; }
+
+
+.shopBox{ margin-top: 10px; }
+.shopBox view { margin-top: 10px; padding-left: 20px;}
+.shopName{ color:#48776f; font-size: 30px; border-bottom: 2px solid #ccc; padding-bottom: 10px;}
